# hence

./: .gitignore  Pipfile  README.md  hence.py  pyproject.toml  requirements-dev.txt  requirements.txt  tests.py
docs/: CONTRIBUTING  DRAFT-alt-implemenation.md  api-docs.md  features-and-use-cases.md  setup.md
tests/: run_things.py  test_misc.py  test_work.py  test_work_context.py  test_work_decorator.py  test_workexecframe.py  test_workflow.py  test_workgroup.py  tests.py
tests/samples/: web_scraping.py  web_scraping_class.py
