[project]
name = "hence"
version = "0.7.0"
authors = [
  { name="Mahmudul Hasan", email="hasanlock@gmail.com" },
]
description = "Hence, a powerful framework designed to streamline data pipeline, scraping, automation workflow orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
  "paradag @ git+https://github.com/0hsn/paradag.git",
]

[project.urls]
Homepage = "https://github.com/0hsn/hence"
Issues = "https://github.com/0hsn/hence/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
